--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -15,6 +15,7 @@
         </a>
         <div class="navbar-menu">
             <a href="index.html">首页</a>
+            <a href="analysis.html">期刊分析</a>
             <a href="register.html">注册</a>
         </div>
     </nav>
