--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -13,10 +13,10 @@
             <i class="fas fa-graduation-cap"></i>
             PaperMaster
         </a>
-        <div class="navbar-menu">
+        <div class="navbar-menu" id="navMenu">
             <a href="index.html">首页</a>
             <a href="analysis.html">期刊分析</a>
-            <a href="register.html">注册</a>
+            <a href="register.html" class="btn btn-primary">注册</a>
         </div>
     </nav>
 
