--- a/src/main/resources/static/profile.html
+++ b/src/main/resources/static/profile.html
@@ -13,7 +13,7 @@
             <i class="fas fa-graduation-cap"></i>
             PaperMaster
         </a>
-        <div class="navbar-menu">
+        <div class="navbar-menu" id="navMenu">
             <a href="index.html">首页</a>
             <a href="analysis.html">期刊分析</a>
             <a href="#" id="logoutBtn" class="btn btn-outline">退出登录</a>
