--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -3,22 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>登录 - 学术论文管理系统</title>
+    <title>登录 - PaperMaster</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-    <nav class="navbar">
-        <a href="index.html" class="navbar-brand">
-            <i class="fas fa-graduation-cap"></i>
-            PaperMaster
-        </a>
-        <div class="navbar-menu" id="navMenu">
-            <a href="index.html">首页</a>
-            <a href="analysis.html">期刊分析</a>
-            <a href="register.html" class="btn btn-primary">注册</a>
-        </div>
-    </nav>
+    <!-- 导航栏容器 -->
+    <div id="navbar-container"></div>
 
     <div class="container">
         <div class="auth-container">
@@ -40,7 +31,7 @@
         </div>
     </div>
 
-    <script src="js/main.js"></script>
+    <script src="js/components.js"></script>
     <script src="js/auth.js"></script>
 </body>
 </html>
