--- a/src/main/resources/static/profile.html
+++ b/src/main/resources/static/profile.html
@@ -3,22 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>个人中心 - 学术论文管理系统</title>
+    <title>个人中心 - PaperMaster</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-    <nav class="navbar">
-        <a href="index.html" class="navbar-brand">
-            <i class="fas fa-graduation-cap"></i>
-            PaperMaster
-        </a>
-        <div class="navbar-menu" id="navMenu">
-            <a href="index.html">首页</a>
-            <a href="analysis.html">期刊分析</a>
-            <a href="#" id="logoutBtn" class="btn btn-outline">退出登录</a>
-        </div>
-    </nav>
+    <!-- 导航栏容器 -->
+    <div id="navbar-container"></div>
 
     <div class="container">
         <div class="profile-container">
@@ -71,10 +62,6 @@
                 <div class="profile-section">
                     <h3><i class="fas fa-bolt"></i> 快捷操作</h3>
                     <div class="quick-actions">
-                        <a href="index.html" class="quick-action-card">
-                            <i class="fas fa-search"></i>
-                            <span>论文检索</span>
-                        </a>
                         <a href="analysis.html" class="quick-action-card">
                             <i class="fas fa-chart-bar"></i>
                             <span>期刊分析</span>
@@ -85,7 +72,11 @@
         </div>
     </div>
 
-    <script src="js/main.js"></script>
+    <script src="js/components.js"></script>
     <script src="js/profile.js"></script>
+    <script>
+        // 需要登录才能访问个人中心
+        requireLogin('profile.html');
+    </script>
 </body>
 </html>
