feat(ai):auto context

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -27,7 +27,7 @@
             </div>
             
             <div class="feature-card">
-                <div class="feature-icon"><i class="fas fa-robot"></i></div>
+                <div class="feature-icon"><span style="font-weight:bold;font-size:1.2rem;">DS</span></div>
                 <h3>AI 助手</h3>
                 <p>智能对话助手，帮助您解读分析结果、解答学术问题。</p>
                 <a href="analysis.html" class="btn btn-outline feature-btn" data-require-login="true">立即体验</a>
@@ -60,15 +60,15 @@
             width: 60px;
             height: 60px;
             margin: 0 auto 1rem;
-            background: #3498db;
+            background: #1a1a1a;
             border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
         }
         .feature-icon i { font-size: 1.5rem; color: white; }
-        .feature-card h3 { margin-bottom: 0.8rem; color: #2c3e50; }
-        .feature-card p { color: #7f8c8d; margin-bottom: 1.2rem; line-height: 1.5; font-size: 0.95rem; }
+        .feature-card h3 { margin-bottom: 0.8rem; color: #1a1a1a; }
+        .feature-card p { color: #666666; margin-bottom: 1.2rem; line-height: 1.5; font-size: 0.95rem; }
     </style>
 
     <script src="js/components.js"></script>
