--- a/src/main/resources/static/analysis.html
+++ b/src/main/resources/static/analysis.html
@@ -45,21 +45,25 @@
                         <div id="analysisLoader" class="loader" style="display: none;"></div>
                         <div id="analysisResult"></div>
                     </div>
+
+                    <!-- 分析历史 -->
+                    <div class="card history-card" id="historyContainer" style="display: none;">
+                        <h3><i class="fas fa-history"></i> 分析历史</h3>
+                        <div id="historyList" class="history-list"></div>
+                    </div>
                 </div>
 
                 <!-- 右侧：AI对话 -->
                 <div class="analysis-right">
                     <div class="card chat-card">
-                        <h3><i class="fas fa-robot"></i> AI 助手</h3>
+                        <h3><svg class="deepseek-icon" viewBox="0 0 24 24" width="20" height="20" fill="currentColor"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-1 17.93c-3.95-.49-7-3.85-7-7.93 0-.62.08-1.21.21-1.79L9 15v1c0 1.1.9 2 2 2v1.93zm6.9-2.54c-.26-.81-1-1.39-1.9-1.39h-1v-3c0-.55-.45-1-1-1H8v-2h2c.55 0 1-.45 1-1V7h2c1.1 0 2-.9 2-2v-.41c2.93 1.19 5 4.06 5 7.41 0 2.08-.8 3.97-2.1 5.39z"/></svg> AI 助手</h3>
                         <p class="text-muted">有问题？问问AI助手吧！</p>
                         
                         <div class="chat-container" id="chatContainer">
                             <div class="chat-messages" id="chatMessages">
                                 <div class="chat-message bot">
-                                    <div class="message-avatar"><i class="fas fa-robot"></i></div>
-                                    <div class="message-content">
-                                        您好！我是期刊分析AI助手。您可以问我任何关于论文分析的问题。
-                                    </div>
+                                    <div class="message-avatar"><span class="ds-logo">DS</span></div>
+                                    <div class="message-content">您好！我是期刊分析AI助手。您可以问我任何关于论文分析的问题。</div>
                                 </div>
                             </div>
                             
