feat(upload&ana)

--- a/src/main/resources/static/analysis.html
+++ b/src/main/resources/static/analysis.html
@@ -32,10 +32,7 @@
                         
                         <div class="action-buttons">
                             <button id="runAnalysisBtn" class="btn btn-primary btn-lg">
-                                <i class="fas fa-play"></i> 运行数据分析
-                            </button>
-                            <button id="analyzeDbBtn" class="btn btn-outline">
-                                <i class="fas fa-database"></i> 分析数据库数据
+                                <i class="fas fa-play"></i> 开始分析
                             </button>
                         </div>
                     </div>
