--- a/src/main/resources/static/analysis.html
+++ b/src/main/resources/static/analysis.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>期刊分析 - PaperMaster</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
@@ -84,12 +84,12 @@
         </div>
     </div>
 
-    <script src="js/components.js"></script>
-    <script src="js/analysis.js"></script>
+    <script src="/js/components.js"></script>
+    <script src="/js/analysis.js"></script>
     <script>
         // 需要登录才能访问
         document.addEventListener('DOMContentLoaded', () => {
-            if (!requireLogin('analysis.html')) return;
+            if (!requireLogin('/analysis.html')) return;
         });
     </script>
 </body>
