--- a/src/main/resources/static/auth/login.html
+++ b/src/main/resources/static/auth/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>登录 - PaperMaster</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
@@ -26,12 +26,12 @@
                 <button type="submit" class="btn btn-primary" style="width: 100%; margin-top: 1rem;">登录</button>
             </form>
             <div class="auth-footer">
-                还没有账号？ <a href="register.html">立即注册</a>
+                还没有账号？ <a href="/auth/register.html">立即注册</a>
             </div>
         </div>
     </div>
 
-    <script src="js/components.js"></script>
-    <script src="js/auth.js"></script>
+    <script src="/js/components.js"></script>
+    <script src="/js/auth.js"></script>
 </body>
 </html>
