--- a/src/main/resources/static/auth/register.html
+++ b/src/main/resources/static/auth/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>注册 - PaperMaster</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
@@ -34,12 +34,12 @@
                 <button type="submit" class="btn btn-primary" style="width: 100%; margin-top: 1rem;">注册</button>
             </form>
             <div class="auth-footer">
-                已有账号？ <a href="login.html">立即登录</a>
+                已有账号？ <a href="/auth/login.html">立即登录</a>
             </div>
         </div>
     </div>
 
-    <script src="js/components.js"></script>
-    <script src="js/auth.js"></script>
+    <script src="/js/components.js"></script>
+    <script src="/js/auth.js"></script>
 </body>
 </html>
