--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,18 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PaperMaster - 学术论文管理系统</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <!-- 导航栏容器 -->
     <div id="navbar-container"></div>
 
-    <!-- 主内容 -->
     <div class="container">
         <div class="search-hero">
             <h1 class="search-title">PaperMaster</h1>
-            <p style="margin-bottom: 2rem; color: #7f8c8d; font-size: 1.2rem;">学术论文管理与智能分析平台</p>
+            <p class="hero-subtitle">学术论文管理与智能分析平台</p>
         </div>
 
         <div class="features-section">
@@ -27,7 +26,7 @@
             </div>
             
             <div class="feature-card">
-                <div class="feature-icon"><span style="font-weight:bold;font-size:1.2rem;">DS</span></div>
+                <div class="feature-icon"><span class="icon-text">DS</span></div>
                 <h3>AI 助手</h3>
                 <p>智能对话助手，帮助您解读分析结果、解答学术问题。</p>
                 <a href="analysis.html" class="btn btn-outline feature-btn" data-require-login="true">立即体验</a>
@@ -42,43 +41,15 @@
         </div>
     </div>
 
-    <style>
-        .features-section {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 2rem;
-            margin-top: 3rem;
-        }
-        .feature-card {
-            background: white;
-            border-radius: 8px;
-            padding: 2rem;
-            text-align: center;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.06);
-        }
-        .feature-icon {
-            width: 60px;
-            height: 60px;
-            margin: 0 auto 1rem;
-            background: #1a1a1a;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-        }
-        .feature-icon i { font-size: 1.5rem; color: white; }
-        .feature-card h3 { margin-bottom: 0.8rem; color: #1a1a1a; }
-        .feature-card p { color: #666666; margin-bottom: 1.2rem; line-height: 1.5; font-size: 0.95rem; }
-    </style>
-
-    <script src="js/components.js"></script>
+    <script src="/js/components.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            // 未登录时修改按钮
             if (!isLoggedIn()) {
                 document.querySelectorAll('.feature-btn').forEach(btn => {
+                    const originalHref = btn.getAttribute('href');
                     btn.textContent = '登录后使用';
-                    btn.href = 'login.html';
+                    const redirectPath = originalHref.startsWith('/') ? originalHref : '/' + originalHref;
+                    btn.href = '/auth/login.html?redirect=' + encodeURIComponent(redirectPath);
                     btn.classList.remove('btn-primary');
                     btn.classList.add('btn-outline');
                 });
