--- a/src/main/resources/static/user/profile.html
+++ b/src/main/resources/static/user/profile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>个人中心 - PaperMaster</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
@@ -62,7 +62,7 @@
                 <div class="profile-section">
                     <h3><i class="fas fa-bolt"></i> 快捷操作</h3>
                     <div class="quick-actions">
-                        <a href="analysis.html" class="quick-action-card">
+                        <a href="/analysis.html" class="quick-action-card">
                             <i class="fas fa-chart-bar"></i>
                             <span>期刊分析</span>
                         </a>
@@ -72,11 +72,11 @@
         </div>
     </div>
 
-    <script src="js/components.js"></script>
-    <script src="js/profile.js"></script>
+    <script src="/js/components.js"></script>
+    <script src="/js/profile.js"></script>
     <script>
         // 需要登录才能访问个人中心
-        requireLogin('profile.html');
+        requireLogin('/user/profile.html');
     </script>
 </body>
 </html>
